--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
             </ul>
         </nav>
     </header>
+<img src="./assets/images/building.jpg" alt="image of Dallas building" class="hero">
+<section class="aboutme">
+    <h2>About Me</h2>
+    <p>I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build </p>
+</section>
+<section class="work">
+    <h2>Work</h2>
+</section>
+<section class="contactme">
+    <h2>Contact Me</h2>
+</section>
 </body>
 </html>
