--- a/index.html
+++ b/index.html
@@ -8,34 +8,36 @@
 </head>
 <body>
     <header>
-        <h1>Carmen Regina</h1>
+        <h1>   Carmen Regina</h1>
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">About Me</a>
+                    <a href="#aboutme">About Me</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Contact Me</a>
+                    <a href="#contactme">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Resume</a>
+                    <a href="#contactme">Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
-<img src="./assets/images/building.jpg" alt="image of Dallas building" class="hero">
-<section class="aboutme">
-    <h2>About Me</h2>
-    <p>I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build </p>
-</section>
-<section class="work">
-    <h2>Work</h2>
-</section>
-<section class="contactme">
-    <h2>Contact Me</h2>
-</section>
+     <section class="hero-image">
+          <h1 class="hero-text">Front-End Developer</h1>
+     </section>
+    <section class="aboutme">
+        <h2>About Me</h2>
+        <p>I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build </p>
+    </section>
+    <section class="work">
+        <h2>Work</h2>
+    </section>
+    <section class="contactme">
+        <h2>Contact Me</h2>
+    </section>
 </body>
 </html>
