--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
      </section>
     <section class="aboutme">
         <h2>About Me</h2>
-        <p>I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build </p>
+        <p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
+        <p>I am excited to make the leap and pivot into technology industry. I hope to continue to expand my skills with the right company. </p>
     </section>
     <section class="work">
         <h2>Work</h2>
     </section>
     <section class="contactme">
         <h2>Contact Me</h2>
+            <ul>
+                <li>(817)-909-8748</li>
+                <li>crcarmen23@yahoo.com</li>
+                <li>Github</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+            </ul>
     </section>
 </body>
 </html>
