added images and contact me list

--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
     </section>
     <section class="work">
         <h2>Work</h2>
+        <img src="./assets/images/nyc building.png" alt="Picture of NYC buildings at night" class="project1">
+        <img src="./assets/images/geometric design.png" alt="Picture of black and white geometric design" class="project2">
+        <img src="./assets/images/rome colosseum.png" alt="Picture of the Rome Colosseum" class="project3">
+        <img src="./assets/images/hot air balloons.png" alt="Picture of hot air balloons in the sky" class="project4">
+        <img src="./assets/images/sand dunes.png" alt="Picture of a person standing on sand dunes" class="project5">
     </section>
     <section class="contactme">
         <h2>Contact Me</h2>
-            <ul>
+            <ul id="contactmelist">
                 <li>(817)-909-8748</li>
                 <li>crcarmen23@yahoo.com</li>
                 <li>Github</li>
