added aside and article sections

--- a/index.html
+++ b/index.html
@@ -30,27 +30,31 @@
           <h1 class="hero-text">Front-End Developer</h1>
      </section>
     <section class="aboutme">
-        <h2>About Me</h2>
-        <p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
+        <aside><h2 id="title">About Me</h2></aside>
+        <article><p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
+        <br>
         <p>I am excited to make the leap and pivot into technology industry. I hope to continue to expand my skills with the right company. </p>
+    </article>
     </section>
     <section class="work">
-        <h2>Work</h2>
-        <img src="./assets/images/nyc building.png" alt="Picture of NYC buildings at night" class="project1">
+        <aside><h2 id="title">Work</h2></aside>
+        <article><img src="./assets/images/nyc building.png" alt="Picture of NYC buildings at night" class="project1">
         <img src="./assets/images/geometric design.png" alt="Picture of black and white geometric design" class="project2">
         <img src="./assets/images/rome colosseum.png" alt="Picture of the Rome Colosseum" class="project3">
         <img src="./assets/images/hot air balloons.png" alt="Picture of hot air balloons in the sky" class="project4">
         <img src="./assets/images/sand dunes.png" alt="Picture of a person standing on sand dunes" class="project5">
+    </article>
     </section>
     <section class="contactme">
-        <h2>Contact Me</h2>
-            <ul id="contactmelist">
+        <aside><h2 id="title">Contact Me</h2></aside>
+            <article><ul id="contactmelist">
                 <li>(817)-909-8748</li>
                 <li>crcarmen23@yahoo.com</li>
                 <li>Github</li>
                 <li>Twitter</li>
                 <li>Instagram</li>
             </ul>
+            </article>
     </section>
 </body>
 </html>
