--- a/index.html
+++ b/index.html
@@ -32,17 +32,27 @@
     <section class="aboutme">
         <aside><h2 id="title">About Me</h2></aside>
         <article><p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
-        <br>
         <p>I am excited to make the leap and pivot into technology industry. I hope to continue to expand my skills with the right company. </p>
     </article>
     </section>
     <section class="work">
         <aside><h2 id="title">Work</h2></aside>
-        <article><img src="./assets/images/nyc building.png" alt="Picture of NYC buildings at night" class="project1">
-        <img src="./assets/images/geometric design.png" alt="Picture of black and white geometric design" class="project2">
-        <img src="./assets/images/rome colosseum.png" alt="Picture of the Rome Colosseum" class="project3">
-        <img src="./assets/images/hot air balloons.png" alt="Picture of hot air balloons in the sky" class="project4">
-        <img src="./assets/images/sand dunes.png" alt="Picture of a person standing on sand dunes" class="project5">
+        <article>
+            <section class="project1-image">
+                <h3 class="project1-text">project 1</h3>
+            </section>
+            <section class="project2-image">
+                <h3 class="project2-text">project 2</h3>
+            </section>
+            <section class="project 3-image">
+                <h3 class="project3-text">project 3</h3>
+            </section>
+            <section class="project 4-image">
+                <h3 class="project4-text">project 4</h3>
+            </section>
+            <section class="project 5-image">
+                <h3 class="project5-text">project 5</h3>
+            </section>
     </article>
     </section>
     <section class="contactme">
