--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
      <section class="hero-image">
           <h1 class="hero-text">Front-End Developer</h1>
      </section>
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
         <aside><h2 id="title">About Me</h2></aside>
         <article><p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
         <p>I am excited to make the leap and pivot into technology industry. I hope to continue to expand my skills with the right company. </p>
     </article>
     </section>
-    <section class="work">
+    <section class="work" id="work">
         <aside><h2 id="title">Work</h2></aside>
         <article>
             <section class="project1-image">
-                <h3 class="project1-text">project 1</h3>
+                <h3 id="project1-text">project 1</h3>
             </section>
             <section class="project2-image">
-                <h3 class="project2-text">project 2</h3>
+                <h3 id="project2-text">project 2</h3>
             </section>
-            <section class="project 3-image">
-                <h3 class="project3-text">project 3</h3>
+            <section class="project3-image">
+                <h3 id="project3-text">project 3</h3>
             </section>
-            <section class="project 4-image">
-                <h3 class="project4-text">project 4</h3>
+            <section class="project4-image">
+                <h3 id="project4-text">project 4</h3>
             </section>
-            <section class="project 5-image">
-                <h3 class="project5-text">project 5</h3>
+            <section class="project5-image">
+                <h3 id="project5-text">project 5</h3>
             </section>
     </article>
     </section>
-    <section class="contactme">
+    <section class="contactme" id="contactme">
         <aside><h2 id="title">Contact Me</h2></aside>
             <article><ul id="contactmelist">
                 <li>(817)-909-8748</li>
