edited typos and last changes before first deploy

--- a/index.html
+++ b/index.html
@@ -32,26 +32,36 @@
     <section class="aboutme" id="aboutme">
         <aside><h2 id="title">About Me</h2></aside>
         <article><p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
-        <p>I am excited to make the leap and pivot into technology industry. I hope to continue to expand my skills with the right company. </p>
+        <p>After completing my Bachelor's and Master's degrees in marketing and management I have decided to make a career change and am excited to take the leap and pivot into the technology industry. I hope to continue to learn everyday and expand my skills with the right company. </p>
     </article>
     </section>
     <section class="work" id="work">
         <aside><h2 id="title">Work</h2></aside>
         <article>
             <section class="project1-image">
-                <h3 id="project1-text">project 1</h3>
+                <h3 id="project1-text">Horiseon Refactor</h3>
+                <br>
+                <h6 id="project1-text">Git/Html/CSS</h6>
             </section>
             <section class="project2-image">
-                <h3 id="project2-text">project 2</h3>
+                <h3 id="project2-text">Github</h3>
+                <br>
+                <h6 id="project2-text">Git/Html/CSS</h6>
             </section>
             <section class="project3-image">
-                <h3 id="project3-text">project 3</h3>
+                <h3 id="project3-text">Github</h3>
+                <br>
+                <h6 id="project3-text">Git/Html/CSS</h6>
             </section>
             <section class="project4-image">
-                <h3 id="project4-text">project 4</h3>
+                <h3 id="project4-text">Github</h3>
+                <br>
+                <h6 id="project4-text">Git/Html/CSS</h6>
             </section>
             <section class="project5-image">
-                <h3 id="project5-text">project 5</h3>
+                <h3 id="project5-text">Github</h3>
+                <br>
+                <h6 id="project5-text">Git/Html/CSS</h6>
             </section>
     </article>
     </section>
