added screenshot to README and added links to image titles and contact me list

--- a/index.html
+++ b/index.html
@@ -39,40 +39,29 @@
         <aside><h2 id="title">Work</h2></aside>
         <article>
             <section class="project1-image">
-                <h3 id="project1-text">Horiseon Refactor</h3>
-                <br>
-                <h6 id="project1-text">Git/Html/CSS</h6>
+                <a href="https://crcarmen23.github.io/horiseon-accessibility-refactor/"><h3 id="project1-text">Horiseon Refactor</h3></a>
             </section>
             <section class="project2-image">
-                <h3 id="project2-text">Github</h3>
-                <br>
-                <h6 id="project2-text">Git/Html/CSS</h6>
+                <a href="https://github.com/crcarmen23"><h3 id="project2-text">Github</h3></a>
             </section>
             <section class="project3-image">
-                <h3 id="project3-text">Github</h3>
-                <br>
-                <h6 id="project3-text">Git/Html/CSS</h6>
+                <a href="https://github.com/crcarmen23"><h3 id="project3-text">Github</h3></a>
             </section>
             <section class="project4-image">
-                <h3 id="project4-text">Github</h3>
-                <br>
-                <h6 id="project4-text">Git/Html/CSS</h6>
+                <a href="https://github.com/crcarmen23"><h3 id="project4-text">Github</h3></a>
             </section>
             <section class="project5-image">
-                <h3 id="project5-text">Github</h3>
-                <br>
-                <h6 id="project5-text">Git/Html/CSS</h6>
+                <a href="https://github.com/crcarmen23"><h3 id="project5-text">Github</h3></a>
             </section>
     </article>
     </section>
     <section class="contactme" id="contactme">
         <aside><h2 id="title">Contact Me</h2></aside>
             <article><ul id="contactmelist">
-                <li>(817)-909-8748</li>
-                <li>crcarmen23@yahoo.com</li>
-                <li>Github</li>
-                <li>Twitter</li>
-                <li>Instagram</li>
+                <a href="tel:817-909-8478"><li>(817)-909-8748</li></a>
+                <a href="mailto:reginac70@yahoo.com"><li>reginac70@yahoo.com</li></a>
+                <a href="https://github.com/crcarmen23"><li>Github</li></a>
+                <a href="https://twitter.com/"><li>Twitter</li></a>
             </ul>
             </article>
     </section>
