--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <aside><h2 id="title">About Me</h2></aside>
         <article><p>Hello! I'm Carmen Regina, a front-end web-developer based out of Dallas, Texas. I love combining logic and creative design to build captivating and user-friendly websites and applications. I have a passion for seamless design and enjoy solving problems in a smart and useful way. </p>
         <p>After completing my Bachelor's and Master's degrees in marketing and management I have decided to make a career change and am excited to take the leap and pivot into the technology industry. I hope to continue to learn everyday and expand my skills with the right company. </p>
+        <img src="./assets/images/Carmen Headshot copy.png" alt="Recent photo of Carmen Regina">
     </article>
     </section>
     <section class="work" id="work">
